启动脚本支持直接在>jdk1.8的环境中启动.